Updates from assignment 3.2